hydroflow/tests/compile-fail/surface_conflicting_name.stderr
error: Name assignment to `a` conflicts with existing assignment: $DIR/tests/compile-fail/surface_conflicting_name.rs:5:9 (1/2)
 --> tests/compile-fail/surface_conflicting_name.rs:6:9
  |
6 |         a = null() -> null();
  |         ^^^^^^^^^^^^^^^^^^^^

error: Existing assignment to `a` conflicts with later assignment: $DIR/tests/compile-fail/surface_conflicting_name.rs:6:9 (2/2)
 --> tests/compile-fail/surface_conflicting_name.rs:5:9
  |
5 |         a = null() -> null();
  |         ^
